[package]
name = "grunt"
description = "WoW Addon Manager+"
version = "0.1.0"
authors = ["camas <camas@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "*" # Argument parsing
ring = "*" # Hash functions
directories = "*" # Special directory locations
lazy_static = "*" # Initialize static variables
dialoguer = "*" # Terminal dialogues
getset = "*" # Getters/setters
reqwest = { version = "*", features = ["blocking", "json", "gzip"] } # HTTP Requests
rayon = "*" # Simple parallelization
regex = "*" # Regex
fancy-regex = "*" # Regex with backtracking
glob = "*" # Globs
# Json read/write
serde_json = "*" 
serde = { version = "*", features = ["derive"] }
